--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -58,7 +58,7 @@
 					<div class="collapse show" id="account-collapse" style="">
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 							<li><a href="#" class="link-dark rounded">프로필 수정</a></li>
-							<li><a href="#" class="link-dark rounded">찜한 여행지</a></li>
+							<li><a href="{% url 'wishlist_view' %}" class="link-dark rounded">찜한 여행지</a></li>
 							<li><a href="#" class="link-dark rounded">여행 뱃지</a></li>
 							<li><a href="#" class="link-dark rounded">Sign out</a></li>
 						</ul>
