add badgein detail_diary

--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -59,7 +59,7 @@
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 							<li><a href="#" class="link-dark rounded">프로필 수정</a></li>
 							<li><a href="#" class="link-dark rounded">찜한 여행지</a></li>
-							<li><a href="#" class="link-dark rounded">여행 뱃지</a></li>
+							<li><a href="#" class="link-dark rounded">나의 여행 뱃지</a></li>
 							<li><a href="#" class="link-dark rounded">Sign out</a></li>
 						</ul>
 					</div>
