--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>diary</title>
+	<title>tourdiary</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	{% load static %}
