ㅡadd main badge

--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -68,12 +68,6 @@
 			<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
 	</div>
-	<div class="badge_tour">
-		<a href="#" class="link_badge">
-			<strong class="screen_out">대표 뱃지 : </strong>
-			<span class="scope_badge"><img src="" class="img_badge">성산일출봉 뱃지</span>
-			<strong class="tit_badge">반짝이는 성산일출봉</strong>
-		</a>
-	</div>
+{% include 'main_badge.html' %}
 </header>
 <div id="main" class="cont_tour">
