--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -46,7 +46,7 @@
 					</button>
 					<div class="collapse show" id="dashboard-collapse" style="">
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-							<li><a href="#" class="link-dark rounded">여행 다이어리 만들기</a></li>
+							<li><a href="" class="link-dark rounded">여행 다이어리 만들기</a></li>
 							<li><a href="{% url 'list_diary' %}" class="link-dark rounded">여행 다이어리</a></li>
 						</ul>
 					</div>
@@ -58,9 +58,9 @@
 					</button>
 					<div class="collapse show" id="account-collapse" style="">
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-							<li><a href="#" class="link-dark rounded">프로필 수정</a></li>
-							<li><a href="#" class="link-dark rounded">나의 여행 뱃지</a></li>
+							<li><a href="{% url 'list_badge' %}" class="link-dark rounded">나의 여행 뱃지</a></li>
 							<li><a href="{% url 'wishlist_view' %}" class="link-dark rounded">찜한 여행지</a></li>
+							<li><a href="#" class="link-dark rounded">프로필 수정</a></li>
 							<li><a href="#" class="link-dark rounded">Sign out</a></li>
 						</ul>
 					</div>
