--- a/common_templates/main_badge.html
+++ b/common_templates/main_badge.html
@@ -3,7 +3,7 @@
     <a href="{% url 'list_badge' %}" class="link_badge">
         <span class="scope_badge">
             <em class="screen_out">{{ main_badge_name }} 뱃지</em>
-            <img src="data:image/png;base64,{{ main_badge_image }}" class="img_badge"  alt={{ main_badge_name }}>
+            <img src="data:image/png;base64,{{ main_badge_image }}" class="img_badge"  alt="{{ main_badge_name }}">
         </span>
         <em class="screen_out">별명</em>
         <strong class="tit_badge">{{ main_nickname }}</strong>
