--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -48,7 +48,7 @@
 					<div class="collapse show" id="dashboard-collapse" style="">
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 							<li><a href="" class="link-dark rounded">여행 다이어리 만들기</a></li>
-							<li><a href="{% url 'list_diary' %}" class="link-dark rounded">여행 다이어리</a></li>
+							<li><a href="{% url 'list_user_diary' %}" class="link-dark rounded">여행 다이어리</a></li>
 							<li><a href="{% url 'list_diary' %}" class="link-dark rounded">다이어리 구경하기</a></li>
 						</ul>
 					</div>
