--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -26,7 +26,7 @@
 		</button>
 		<div class="flex-shrink-0 p-3 bg-white offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel" style="width: 280px;">
 			<h2 class="tit_tour tit_nav">
-				<a href="/" class="link_tit"><span class="ico_tit">tourdiary</span></a>
+				<a href="/travel" class="link_tit"><span class="ico_tit">tourdiary</span></a>
 				<span class="screen_out">메뉴</span>
 			</h2>
 			<ul class="list-unstyled ps-0">
