로그인 적용

--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -36,8 +36,8 @@
 					</button>
 					<div class="collapse show" id="home-collapse" style="">
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-							<li><a href="{% url 'travel:recommend' %}" class="link-dark rounded">직접 여행 계획 만들기</a></li>
-							<li><a href="{% url 'Jpage:jpagerender' %}" class="link-dark rounded">자동 여행 계획 만들기</a></li>
+							<li><a href="{% url 'travel:recommend' %}" class="link-dark rounded">자동 여행 계획 만들기</a></li>
+							<li><a href="{% url 'Jpage:jpagerender' %}" class="link-dark rounded">직접 여행 계획 만들기</a></li>
 						</ul>
 					</div>
 				</li>
