--- a/common_templates/header.html
+++ b/common_templates/header.html
@@ -38,6 +38,7 @@
 						<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 							<li><a href="{% url 'travel:recommend' %}" class="link-dark rounded">자동 여행 계획 만들기</a></li>
 							<li><a href="{% url 'Jpage:jpagerender' %}" class="link-dark rounded">직접 여행 계획 만들기</a></li>
+							<li><a href="{% url 'travel:user_schedules' %}" class="link-dark rounded">나의 여행 일정 보기</a></li>
 						</ul>
 					</div>
 				</li>
